stylish.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    align-items: center;
    display: flex;
    flex-direction: column;
    font-family: 'Work Sans', sans-serif;
    min-height: 100vh;
    padding-top: 3%;
    background-image: linear-gradient(100deg, #d4f1ff, #ffffff);
    color: #1a150e;
    transition: 0.3s linear;
}

form {
    display: flex;
    font-size: 1.7rem;
    justify-content: center;
    margin: 15px 0;
    width: 500px;
}

form input {
    padding: 10px;
    font-size: 17px;
    border: none;
    outline: none;
    border-top-left-radius: 17px;
    border-bottom-left-radius: 17px;
    max-width: 500px;
    transition: background-color 200ms ease-in-out;
    width: 100%;
}

form input:hover {
    cursor: text;
}

button {
    border: none;
    outline: none;
    transition: box-shadow 200ms ease, background-color 200ms ease-in-out;
}

button:hover {
    cursor: pointer;
    background-color: #747980;
    color: white;
}

/* style till sparKnappen här */

form button {
    padding: 10px;
    font-size: 17px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    min-width: 100px;
}

#editBox {
    display: flex;
    padding-bottom: 10px;
    padding-left: 10px;
    justify-content: space-between;
    padding-right: 10px;
}

/* här nere finns kodar till listboxen*/
#listBox {
    display: grid;
    align-content: space-between;
    background-color: #fefcfe;
    border-radius: 20px;
    padding: 30px;
    width: 500px;
    overflow: hidden;
}

.nyList {
    display:flex;
    background-color: #dadada;
    padding-left: 15px;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 27px;
    overflow: hidden;
    max-width: 450px;
}

#tabortBtn {
    background-color: red;
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
    padding: 10px;
    min-width: 10px;
}

#doneBtn {
    background-color: rgb(251, 255, 133);
    margin-left: auto;
    padding: 10px;
}

